-fixed the empty panel between 901 & 929 -fixed the bug that left behind an empty panel when the width of the cart increased enough to not need the panel -removed code at line 722, may be merge issue. -added addition break at 1425 to adjust slider container size; probably should be done in JS instead of css for smoother size adjustment

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1054,6 +1054,12 @@ nav.panel-heading {
 /* Cart view navbar responsiveness */
 @media (max-width: 1300px) {
     #cart .op-cart-nav-container {
+        width: 87%;
+    }
+}
+
+@media (max-width: 1425) {
+    #cart .op-cart-nav-container {
         width: 85%;
     }
 }
